Updated notebook to fit the new file, added export of result.csv file

--- a/forecasting_lm.ipynb
+++ b/forecasting_lm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,204 +31,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = pd.read_excel('input/residents_prognozavimui.xlsx') "
+    "d = pd.read_excel('input/residents1.xlsx') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gender</th>\n",
-       "      <th>dateOfBirth</th>\n",
-       "      <th>countryOfBirth</th>\n",
-       "      <th>registrationDate</th>\n",
-       "      <th>maritalStatus</th>\n",
-       "      <th>terRegCode</th>\n",
-       "      <th>streetCode</th>\n",
-       "      <th>building</th>\n",
-       "      <th>house</th>\n",
-       "      <th>apartment</th>\n",
-       "      <th>eldership</th>\n",
-       "      <th>eldershipId</th>\n",
-       "      <th>subeldership</th>\n",
-       "      <th>subeldershipId</th>\n",
-       "      <th>streetname</th>\n",
-       "      <th>postalcode</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Vyras</td>\n",
-       "      <td>1909-01-18</td>\n",
-       "      <td>RUS</td>\n",
-       "      <td>1989-12-12</td>\n",
-       "      <td>Išsituokęs</td>\n",
-       "      <td>G1</td>\n",
-       "      <td>272.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>97</td>\n",
-       "      <td>44</td>\n",
-       "      <td>Pašilaičiai</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>J. Baltrušaičio</td>\n",
-       "      <td>704.0</td>\n",
-       "      <td>Laisvės pr.</td>\n",
-       "      <td>LT-06120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Vyras</td>\n",
-       "      <td>1913-08-01</td>\n",
-       "      <td>LTU</td>\n",
-       "      <td>1996-05-09</td>\n",
-       "      <td>Vedęs</td>\n",
-       "      <td>G1</td>\n",
-       "      <td>492.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>28</td>\n",
-       "      <td>35</td>\n",
-       "      <td>Fabijoniškės</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>Jovaro</td>\n",
-       "      <td>401.0</td>\n",
-       "      <td>S. Stanevičiaus g.</td>\n",
-       "      <td>LT-07102</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Vyras</td>\n",
-       "      <td>1916-07-01</td>\n",
-       "      <td>LTU</td>\n",
-       "      <td>1993-07-12</td>\n",
-       "      <td>Vedęs</td>\n",
-       "      <td>G1</td>\n",
-       "      <td>549.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>30</td>\n",
-       "      <td>13</td>\n",
-       "      <td>Senamiestis</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>Universiteto</td>\n",
-       "      <td>1604.0</td>\n",
-       "      <td>Totorių g.</td>\n",
-       "      <td>LT-01144</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Vyras</td>\n",
-       "      <td>1916-09-12</td>\n",
-       "      <td>LTU</td>\n",
-       "      <td>1999-12-21</td>\n",
-       "      <td>Našlys</td>\n",
-       "      <td>G1</td>\n",
-       "      <td>203.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>76</td>\n",
-       "      <td>41</td>\n",
-       "      <td>Justiniškės</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>M. Biržiškos</td>\n",
-       "      <td>804.0</td>\n",
-       "      <td>Justiniškių g.</td>\n",
-       "      <td>LT-05233</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Vyras</td>\n",
-       "      <td>1921-06-18</td>\n",
-       "      <td>BLR</td>\n",
-       "      <td>2017-11-02</td>\n",
-       "      <td>Našlys</td>\n",
-       "      <td>G1</td>\n",
-       "      <td>233.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "      <td>Žirmūnai</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Kazliškių</td>\n",
-       "      <td>202.0</td>\n",
-       "      <td>Kazliškių g.</td>\n",
-       "      <td>LT-09203</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  gender dateOfBirth countryOfBirth registrationDate maritalStatus terRegCode  \\\n",
-       "0  Vyras  1909-01-18            RUS       1989-12-12    Išsituokęs         G1   \n",
-       "1  Vyras  1913-08-01            LTU       1996-05-09         Vedęs         G1   \n",
-       "2  Vyras  1916-07-01            LTU       1993-07-12         Vedęs         G1   \n",
-       "3  Vyras  1916-09-12            LTU       1999-12-21        Našlys         G1   \n",
-       "4  Vyras  1921-06-18            BLR       2017-11-02        Našlys         G1   \n",
-       "\n",
-       "   streetCode  building house apartment     eldership  eldershipId  \\\n",
-       "0       272.0       NaN    97        44   Pašilaičiai          7.0   \n",
-       "1       492.0       NaN    28        35  Fabijoniškės          4.0   \n",
-       "2       549.0       NaN    30        13   Senamiestis         16.0   \n",
-       "3       203.0       NaN    76        41   Justiniškės          8.0   \n",
-       "4       233.0       NaN     9         9      Žirmūnai          2.0   \n",
-       "\n",
-       "      subeldership  subeldershipId          streetname postalcode  \n",
-       "0  J. Baltrušaičio           704.0         Laisvės pr.   LT-06120  \n",
-       "1           Jovaro           401.0  S. Stanevičiaus g.   LT-07102  \n",
-       "2     Universiteto          1604.0          Totorių g.   LT-01144  \n",
-       "3     M. Biržiškos           804.0      Justiniškių g.   LT-05233  \n",
-       "4        Kazliškių           202.0        Kazliškių g.   LT-09203  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "d.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d.dropna(subset=['dateOfBirth', 'registrationDate'], inplace=True) \n",
-    "d['ageAtRegistration'] = (d['registrationDate'] - d['dateOfBirth']).dt.days // 365\n",
+    "type(d['USER_registrationDate'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_to_timestamp(x):\n",
+    "   try: \n",
+    "      return pd.to_datetime(x)\n",
+    "   except: \n",
+    "      return None \n",
+    " \n",
+    "\n",
+    "d[\"USER_registrationDate\"] = [convert_to_timestamp(x) for x in d[\"USER_registrationDate\"]]\n",
+    "d['USER_dateOfBirth'] = [convert_to_timestamp(x) for x in d[\"USER_dateOfBirth\"]]\n",
+    "\n",
+    "d.dropna(subset=['USER_dateOfBirth', 'USER_registrationDate'], inplace=True) \n",
+    "d['ageAtRegistration'] = (d['USER_registrationDate'] - d['USER_dateOfBirth']).dt.days // 365\n",
     "\n",
     "# Binning the ages to bins of 10 years\n",
     "d['age_bin'] = pd.cut(d['ageAtRegistration'], bins=np.arange(-1, 120, 10))\n",
     "d['age_bin'] = d['age_bin'].astype(str)\n",
     "\n",
     "# Converting registrationDate to YYYY-MM format \n",
-    "d['timestep'] = d['registrationDate'].dt.to_period('M')\n",
+    "d['timestep'] = d['USER_registrationDate'].dt.to_period('M')\n",
     "\n",
     "# Converting the time steps to integers \n",
     "min_timestep = d['timestep'].min()\n",
@@ -247,20 +99,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(98111, 36) (24528, 36)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Defining a list of dummy features \n",
-    "dummy_features = ['age_bin', 'gender', 'eldership']\n",
+    "dummy_features = ['age_bin', 'USER_gender', 'FID_1']\n",
     "\n",
     "# Dropping the missing rows in the dummy features\n",
     "d = d.dropna(subset=dummy_features)\n",
@@ -293,18 +137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean absolute error: 3.6177190560531662\n",
-      "Mean squared error: 41.4979368659019\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = LinearRegression()\n",
     "model.fit(X_train, y_train) \n",
@@ -332,18 +167,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean absolute error (test): 3.5523331822860436\n",
-      "Mean squared error (test): 38.81258623879962\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Predicting on the test set \n",
     "yhat_test = model.predict(X_test) \n",
@@ -367,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,17 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of possible combinations: 462\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# For each unique dummy feature, getting all the unique values \n",
     "dummy_features_values = {}\n",
@@ -413,17 +231,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 24/24 [00:59<00:00,  2.48s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Iterating over each timestep to the future and predicing the counts\n",
     "future_predictions = []\n",
@@ -453,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,167 +276,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>timestep_int</th>\n",
-       "      <th>age_bin</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>eldership</th>\n",
-       "      <th>count</th>\n",
-       "      <th>timestep</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>908</td>\n",
-       "      <td>(79, 89]</td>\n",
-       "      <td>Vyras</td>\n",
-       "      <td>Pašilaičiai</td>\n",
-       "      <td>4.007964</td>\n",
-       "      <td>2024-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>908</td>\n",
-       "      <td>(79, 89]</td>\n",
-       "      <td>Vyras</td>\n",
-       "      <td>Fabijoniškės</td>\n",
-       "      <td>2.801377</td>\n",
-       "      <td>2024-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>908</td>\n",
-       "      <td>(79, 89]</td>\n",
-       "      <td>Vyras</td>\n",
-       "      <td>Senamiestis</td>\n",
-       "      <td>1.223508</td>\n",
-       "      <td>2024-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>908</td>\n",
-       "      <td>(79, 89]</td>\n",
-       "      <td>Vyras</td>\n",
-       "      <td>Justiniškės</td>\n",
-       "      <td>0.892856</td>\n",
-       "      <td>2024-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>908</td>\n",
-       "      <td>(79, 89]</td>\n",
-       "      <td>Vyras</td>\n",
-       "      <td>Žirmūnai</td>\n",
-       "      <td>3.174376</td>\n",
-       "      <td>2024-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11083</th>\n",
-       "      <td>931</td>\n",
-       "      <td>(-1, 9]</td>\n",
-       "      <td>Moteris</td>\n",
-       "      <td>Verkiai</td>\n",
-       "      <td>16.453900</td>\n",
-       "      <td>2026-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11084</th>\n",
-       "      <td>931</td>\n",
-       "      <td>(-1, 9]</td>\n",
-       "      <td>Moteris</td>\n",
-       "      <td>Šnipiškės</td>\n",
-       "      <td>11.255871</td>\n",
-       "      <td>2026-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11085</th>\n",
-       "      <td>931</td>\n",
-       "      <td>(-1, 9]</td>\n",
-       "      <td>Moteris</td>\n",
-       "      <td>Naujininkai</td>\n",
-       "      <td>13.574821</td>\n",
-       "      <td>2026-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11086</th>\n",
-       "      <td>931</td>\n",
-       "      <td>(-1, 9]</td>\n",
-       "      <td>Moteris</td>\n",
-       "      <td>Vilkpėdė</td>\n",
-       "      <td>10.978170</td>\n",
-       "      <td>2026-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11087</th>\n",
-       "      <td>931</td>\n",
-       "      <td>(-1, 9]</td>\n",
-       "      <td>Moteris</td>\n",
-       "      <td>Paneriai</td>\n",
-       "      <td>9.770613</td>\n",
-       "      <td>2026-05</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>11088 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       timestep_int   age_bin   gender     eldership      count timestep\n",
-       "0               908  (79, 89]    Vyras   Pašilaičiai   4.007964  2024-06\n",
-       "1               908  (79, 89]    Vyras  Fabijoniškės   2.801377  2024-06\n",
-       "2               908  (79, 89]    Vyras   Senamiestis   1.223508  2024-06\n",
-       "3               908  (79, 89]    Vyras   Justiniškės   0.892856  2024-06\n",
-       "4               908  (79, 89]    Vyras      Žirmūnai   3.174376  2024-06\n",
-       "...             ...       ...      ...           ...        ...      ...\n",
-       "11083           931   (-1, 9]  Moteris       Verkiai  16.453900  2026-05\n",
-       "11084           931   (-1, 9]  Moteris     Šnipiškės  11.255871  2026-05\n",
-       "11085           931   (-1, 9]  Moteris   Naujininkai  13.574821  2026-05\n",
-       "11086           931   (-1, 9]  Moteris      Vilkpėdė  10.978170  2026-05\n",
-       "11087           931   (-1, 9]  Moteris      Paneriai   9.770613  2026-05\n",
-       "\n",
-       "[11088 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "future_predictions_df"
+    "future_predictions_df.to_csv('result.csv')\n",
+    "future_predictions_df.groupby('FID_1').plot(x='timestep', y='count')"
    ]
   }
  ],
@@ -646,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
